--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recepten bolognaise lasagna</title>
+</head>
+<body>
+    
+    <h1> bolognaise lasagna</h1>
+    <ul>
+        <li><a href="index.html">bolognaise lasagna</a></li>
+        <li><a href="carbonara-pasta.html">snelle recept voor carbonara pasta</a></li>
+        <li><a href="tiramisu.html">gourmet tiramisu</a></li>
+    </ul>
+
+    <img src="images/lasagna.webp" alt="" width="500px">
+
+    <h2>ingredienten</h2>
+
+    <ul>
+        <li>1 pakket van lasagna</li>
+        <li>3 gele uien</li>
+        <li>2 teentjes knoflook</li>
+        <li>1 stengel bleekselderij</li>
+        <li>1 wortel</li>
+        <li>800 g tomatenpuree</li>
+        <li>15 cl water </li>
+        <li>20 cl rode wijn</li>
+        <li>2 laurierblaadjes</li>
+        <li>tijm</li>
+        <li>basilicum</li>
+        <li>3 snufjes muskanootjes</li>
+        <li>70 g geraspte kaas</li>
+        <li>125 g parmesan kaas</li>
+        <li>zout</li>
+        <li>peper</li>
+        <li>100 g bloem</li>
+        <li>125 g boter</li>
+        <li>1 l melk</li>
+        <li>600 g gehakte rundervlees</li>
+    </ul>
+    <h2>bereiding</h2>
+
+    <ol>
+        <li>Fruit de gesnipperde teentjes knoflook en de gesnipperde uien in een beetje olijfolie.</li>
+        <li>Voeg de wortel en de gesneden bleekselderij toe, dan het vlees en bak alles bruin.</li>
+        <li>Voeg na enkele minuten de rode wijn toe. Laat koken tot het verdampt.</li>
+        <li>Voeg de tomatenpuree, het water en de kruiden toe. Kruid met peper en zout en laat 45 minuten op laag vuur.</li>
+        <li>Bereid de bechamel: smelt 100 g boter.</li>
+        <li>Voeg van het vuur de bloem in één keer toe.</li>
+        <li>Zet terug op het vuur en roer met een garde tot een gladde massa.</li>
+        <li>Voeg beetje bij beetje de melk toe.</li>
+        <li>Roer constant, totdat het mengsel dikker wordt.</li>
+        <li>Breng vervolgens op smaak met nootmuskaat, zout, peper. Kook ongeveer 5 minuten op zeer laag vuur, al roerend. Reserveren.</li>
+        <li>Verwarm de oven voor op 200°C (thermostaat 6-7). Vet de lasagneschaal in. Leg een dun laagje bechamel en vervolgens lasagnebladen, bolognese, bechamel en Parmezaanse kaas. Herhaal de handeling 3 keer achter elkaar.</li>
+        <li>Leg op de laatste laag lasagne alleen bechamel en bedek met geraspte kaas. Strooi er een paar klontjes boter over.</li>
+        <li>Bak ongeveer 25 minuten koken.</li>
+        <li>het gerecht is klaar.</li>
+    </ol>
+
+</body>
+</html>
